Frontend has been added and connect with the backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 numpy
 pandas
+seaborn
+matplotlib
 scikit-learn
+catboost
+xgboost
+dill
+python-dotenv
+flask-cors
+googlesearch-python
+tld
 -e .
